# borg-find

./: README.md  borgdel.sh  borgmake.sh  pyproject.toml  sqlite-test.py
borg_find/: borg.py  cli.py  filters.py  model.py  utils.py
