[tool.poetry]
name = "borg_find"
version = "0.2.0"
description = "Tool to search files in borg archives"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.11"
cached-property = "^1.5"
colorama = "^0.4.6"
sqlitedict = "^2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7"
pylint = "^2.17"
pytest = "^7.4"
pytest-cov = "^4.1"
rope = "^1.9"



[tool.poetry.scripts]
borg-find = 'borg_find.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
